Small bug fix in NetworkManagerTest and translate remaining comments/network gui elements in English